--- a/src/containers/SinglePrice/style.css
+++ b/src/containers/SinglePrice/style.css
@@ -1,4 +1,20 @@
-.SiglePrice {
-  width: 100%;
-  height: 100%;
+.PriceSingle {
+  width: 1440px;
+  height: auto;
+  display: flex;
+  color: hsl(203, 68%, 26%);
+}
+
+.PriceSingle__Card {
+  width: 440px;
+  height: auto;
+  display: flex;
+  color: hsl(106, 68%, 26%);
+}
+
+.PriceSingle__Card__Butto {
+  width: 40px;
+  height: auto;
+  display: flex;
+  color: hsl(60, 28%, 76%);
 }
