--- a/src/components/Button/style.css
+++ b/src/components/Button/style.css
@@ -1,17 +1,25 @@
 .button {
-  width: 100%;
-  height: 100%;
-  background-color: hsl(245, 50%, 52%);
+  background-color: hsl(71, 73%, 54%);
+  color: white;
+  border: none;
+  font-size: calc(8px + 0.5vw);
+  font-family: "Karla", sans-serif;
+  font-weight: bold;
+  height: 55px;
+  width: 255px;
+  border-radius: 8px;
+  box-shadow: 0px 20px 80px rgb(65, 56, 56);
 }
 
-.button--outined {
-  width: 100%;
-  height: 100%;
-  background-color: hsl(108, 72%, 47%);
-}
-
-.button--outined:hover {
-  width: 100%;
-  height: 100%;
-  background-color: hsl(293, 50%, 52%);
-}
+/* height: auto;
+flex-direction: column;
+position: relative;
+display: flex;
+opacity: 0.7;
+font-family: "Karla", sans-serif;
+display: block;
+letter-spacing: 0.3px;
+top: -8px;
+left: 0%;
+padding-bottom: 13px;
+} */
