--- a/src/components/Type/style.css
+++ b/src/components/Type/style.css
@@ -1,8 +1,48 @@
-.text {
-  width: 100%;
-  height: 100%;
-  color: black;
+.h1__title {
+  /* font-size: 16px; */
+  font-size: calc(16px + 0.5vw);
+  font-family: "Karla", sans-serif;
+}
+.h2__subtitle {
+  font-size: calc(13px + 0.5vw);
+}
+.h3__textCard {
+  font-size: calc(8px + 0.5vw);
+  font-family: "Karla", sans-serif;
+  font-weight: 500;
+}
+.h4__subtitle {
+  font-size: calc(7px + 0.5vw);
+  font-family: "Karla", sans-serif;
+  font-weight: 500;
+}
+.h5__subletitle__number {
+  font-size: calc(20px + 0.5vw);
+}
+.h6__subletitle__text2 {
+  font-size: calc(8px + 0.5vw);
+  font-family: "Karla", sans-serif;
+  font-weight: 500;
 }
 
 /* colocar so o tamanho */
-/*  */
+
+/* .h1__title {
+  font-size: ;
+}
+.h2__subtitle {
+  font-size: ;
+}
+.h3__textCard {
+  font-size: ;
+}
+.h4__subtitle {
+  font-size: ;
+}
+.h5__subletitle__number {
+  font-size: ;
+} 
+.h6__subletitle__text2 {
+  font-size: 10px;
+}
+*/
