--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -1,4 +1,8 @@
 .home {
   width: 100%;
-  height: 100%;
+  height: 1000px;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  position: relative;
 }
