--- a/src/components/Button/style.css
+++ b/src/components/Button/style.css
@@ -1,25 +1,22 @@
 .button {
-  background-color: hsl(71, 73%, 54%);
+  background-color: var(--bright-yellow);
   color: white;
   border: none;
-  font-size: calc(8px + 0.5vw);
+  margin: 18px 0;
+  font-size: 14px;
+  border-radius: 5px;
+  box-shadow: 2px 10px 43px -8px rgba(0, 0, 0, 0.75);
   font-family: "Karla", sans-serif;
-  font-weight: bold;
-  height: 55px;
-  width: 255px;
-  border-radius: 8px;
-  box-shadow: 0px 20px 80px rgb(65, 56, 56);
+  cursor: pointer;
+  /* TRANSICAO */
+  transition: all 0.3s;
+  height: 45px;
+  width: 100%;
+  max-width: 300px;
 }
 
-/* height: auto;
-flex-direction: column;
-position: relative;
-display: flex;
-opacity: 0.7;
-font-family: "Karla", sans-serif;
-display: block;
-letter-spacing: 0.3px;
-top: -8px;
-left: 0%;
-padding-bottom: 13px;
-} */
+.button:hover {
+  background-color: white;
+  color: var(--bright-yellow);
+  border: 1px solid var(--bright-yellow);
+}
