--- a/src/components/Type/style.css
+++ b/src/components/Type/style.css
@@ -1,48 +1,34 @@
 .h1__title {
   /* font-size: 16px; */
-  font-size: calc(16px + 0.5vw);
+  /* font-size: calc(16px + 0.5vw); */
   font-family: "Karla", sans-serif;
+  /* text-align: center; */
+  font-size: 16px;
+  font-weight: 700;
 }
 .h2__subtitle {
-  font-size: calc(13px + 0.5vw);
+  /* font-size: calc(13px + 0.5vw); */
+  font-size: 16px;
 }
 .h3__textCard {
-  font-size: calc(8px + 0.5vw);
+  /* font-size: calc(8px + 0.5vw); */
   font-family: "Karla", sans-serif;
   font-weight: 500;
+  font-size: 16px;
 }
 .h4__subtitle {
-  font-size: calc(7px + 0.5vw);
+  /* font-size: calc(7px + 0.5vw); */
   font-family: "Karla", sans-serif;
   font-weight: 500;
+  font-size: 16px;
 }
 .h5__subletitle__number {
-  font-size: calc(20px + 0.5vw);
+  /* font-size: calc(20px + 0.5vw); */
+  font-size: 28px;
 }
 .h6__subletitle__text2 {
-  font-size: calc(8px + 0.5vw);
+  /* font-size: calc(8px + 0.5vw); */
   font-family: "Karla", sans-serif;
   font-weight: 500;
+  font-size: 16px;
 }
-
-/* colocar so o tamanho */
-
-/* .h1__title {
-  font-size: ;
-}
-.h2__subtitle {
-  font-size: ;
-}
-.h3__textCard {
-  font-size: ;
-}
-.h4__subtitle {
-  font-size: ;
-}
-.h5__subletitle__number {
-  font-size: ;
-} 
-.h6__subletitle__text2 {
-  font-size: 10px;
-}
-*/
