--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -1,8 +1,18 @@
 .home {
+  background-color: hsl(204, 43%, 93%);
+  font-family: "Karla", sans-serif;
   width: 100%;
-  height: 1000px;
-  background-color: black;
+  height: 100vh;
   display: flex;
+  align-items: center;
   justify-content: center;
-  position: relative;
 }
+
+/* DISPLAY FLEX
+Torna o elemento um flex container automaticamente transformando todos os seus filhos diretos em flex itens. */
+
+/* ALING-ITEMS
+A propriedade align-self estabelece o alinhamento de um certo item dentro do bloco que o contém. Em Flexbox ele controla o alinhamento dos itens */
+
+/* JUSTIFY CONTENT 
+A propriedade CSS justify - content define como o navegador distribui espaço entre e ao redor de itens de conteúdo ao longo do eixo principal de um flex */
