--- a/src/components/Type/style.css
+++ b/src/components/Type/style.css
@@ -1,34 +1,30 @@
 .h1__title {
-  /* font-size: 16px; */
-  /* font-size: calc(16px + 0.5vw); */
   font-family: "Karla", sans-serif;
-  /* text-align: center; */
-  font-size: 16px;
-  font-weight: 700;
+  font-weight: 600;
+  margin-bottom: 16px;
+  font-size: 22px;
+  margin-top: 12px;
+  letter-spacing: 1px;
 }
 .h2__subtitle {
-  /* font-size: calc(13px + 0.5vw); */
-  font-size: 16px;
+  font-family: "Karla", sans-serif;
+  font-size: 17px;
+  font-weight: 600;
+  letter-spacing: 1px;
 }
 .h3__textCard {
-  /* font-size: calc(8px + 0.5vw); */
   font-family: "Karla", sans-serif;
   font-weight: 500;
-  font-size: 16px;
+  font-size: 14px;
+  letter-spacing: 0.5px;
+  line-height: 23px;
 }
 .h4__subtitle {
-  /* font-size: calc(7px + 0.5vw); */
   font-family: "Karla", sans-serif;
   font-weight: 500;
-  font-size: 16px;
+  font-size: 13px;
 }
 .h5__subletitle__number {
-  /* font-size: calc(20px + 0.5vw); */
-  font-size: 28px;
-}
-.h6__subletitle__text2 {
-  /* font-size: calc(8px + 0.5vw); */
   font-family: "Karla", sans-serif;
-  font-weight: 500;
-  font-size: 16px;
+  font-size: 28px;
 }
